tests/ui/unicode-quote.rs
fn main() {
    dbg!("since when is \“THIS\” not allowed in a string literal");
}
